added templates for front-end

--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -103,13 +103,12 @@ const registerUser = async (event) => {
 };
 
 const goToLoginPage = () => {
-  window.location.href = "/users/login";
+  window.location.href = "/login";
 };
 
 const goToMainPage = () => {
   window.location.href = "/";
 };
-
     </script>
   </body>
 </html>
