--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,9 @@
         <form action="http://localhost:8000/signup/">
         <button class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg mr-4">Sign Up</button>
         </form>
+        <form action="http://localhost:8000/login/">
         <button class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg">Log In</button>
+        </form>
       </div>
     </div>
   </nav>
