--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
@@ -11,55 +11,20 @@
     <div class="flex justify-center items-center h-screen">
       <div class="bg-gray-700 p-6 rounded-lg w-1/3">
         <h1 class="text-2xl text-gray-300 font-bold mb-6">Login</h1>
-        <form
-          id="login-form"
-          method="post"
-          action="/users/login"
-          enctype="application/json"
-        >
-          <div class="mb-4">
-            <label
-              class="block text-gray-400 font-bold mb-2"
-              for="email"
-            >
-              Email
-            </label>
-            <input
-              name="email"
-              class="appearance-none border-2 border-gray-600 rounded w-full py-2 px-3 text-gray-200 leading-tight focus:outline-none focus:bg-gray-900 focus:border-gray-500"
-              id="email"
-              type="email"
-              placeholder="example@example.com"
-            />
+        <form id="login-form" method="POST" action="/login" class="space-y-4">
+          <div class="space-y-2">
+            <label for="email" class="text-gray-300 font-semibold block">Email</label>
+            <input type="email" name="username" id="email" class="appearance-none block w-full bg-gray-200 text-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" required>
           </div>
-          <div class="mb-6">
-            <label
-              class="block text-gray-400 font-bold mb-2"
-              for="password"
-            >
-              Password
-            </label>
-            <input
-              name="password"
-              class="appearance-none border-2 border-gray-600 rounded w-full py-2 px-3 text-gray-200 leading-tight focus:outline-none focus:bg-gray-900 focus:border-gray-500"
-              id="password"
-              type="password"
-              placeholder="********"
-            />
+          <div class="space-y-2">
+            <label for="password" class="text-gray-300 font-semibold block">Password</label>
+            <input type="password" name="password" id="password" class="appearance-none block w-full bg-gray-200 text-gray-700 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white" required>
           </div>
-          <div class="flex justify-center">
-            <button
-              class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-full"
-              type="submit"
-              onclick="loginUser(event)"
-            >
-              Login
-            </button>
+          <div class="space-y-2">
+            <button type="submit" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-full">Login</button>
           </div>
         </form>
-        <div id="response" class="mt-4"></div>
       </div>
     </div>
-    <script src="login.js"></script>
   </body>
 </html>
